--- a/less/loading.less
+++ b/less/loading.less
@@ -2,18 +2,17 @@
 // =======================
 
 .loading {
-    background-color: @white;
-    position: fixed!important; // Needs to be fixed otherwise loading layout can be incorrect
+	background-color: @white;
+	position: fixed!important; // Needs to be fixed otherwise loading layout can be incorrect
 
-    .loader-gif {
-        background-image: url(assets/loader.gif);
-        width: 128px;
-        height: 128px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-top: -64px;
-        margin-left: -64px;
-    }
-
+	.loader-gif {
+		background-image: url("assets/loader.gif");
+		height: 128px;
+		left: 50%;
+		margin-top: -64px;
+		margin-left: -64px;
+		position: absolute;
+		top: 50%;
+		width: 128px;
+	}
 }
