--- a/less/fonts.less
+++ b/less/fonts.less
@@ -4,81 +4,81 @@
 // Fonts
 // =====
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,700);
+@import url(//fonts.googleapis.com/css?family=Roboto:300,700);
 
 body {
-    font-family: 'Roboto', Arial, sans-serif;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 140%;
-    color: @black;
+	color: @black;
+	font-family: 'Roboto', Arial, sans-serif;
+	font-size: 14px;
+	font-weight: 300;
+	line-height: 140%;
 }
 
-.tooltip {
-    font-family: 'Roboto', Arial, sans-serif;
+span {
+	font-family: 'Roboto', Arial, sans-serif;
 }
 
 h1,
 .h1 {
 	font-size: 48px;
 	font-weight: 300;
-    line-height: 140%;
-    -webkit-font-smoothing: antialiased;
+	line-height: 140%;
+	-webkit-font-smoothing: antialiased;
 }
 
 h2,
 .h2 {
-    font-size: 36px;
-    font-weight: 300;
-    line-height: 140%;
-    -webkit-font-smoothing: antialiased;
+	font-size: 36px;
+	font-weight: 300;
+	line-height: 140%;
+	-webkit-font-smoothing: antialiased;
 }
 
 h3,
 .h3 {
-    font-size: 36px;
-    font-weight: 300;
-    line-height: 140%;
-    -webkit-font-smoothing: antialiased;
+	font-size: 36px;
+	font-weight: 300;
+	line-height: 140%;
+	-webkit-font-smoothing: antialiased;
 }
 
 h4,
 .h4 {
-    font-size: 36px;
-    font-weight: 300;
-    line-height: 140%;
-    -webkit-font-smoothing: antialiased;
+	font-size: 36px;
+	font-weight: 300;
+	line-height: 140%;
+	-webkit-font-smoothing: antialiased;
 }
 
 h5,
 .h5 {
-    font-size: 14px;
-    line-height: 140%;
+	font-size: 14px;
 	font-weight: 300;
+	line-height: 140%;
 }
 
 h6,
 .h6 {
-    font-size: 14px;
-    line-height: 140%;
+	font-size: 14px;
 	font-weight: 300;
+	line-height: 140%;
 }
 
 select {
-    font-size: 14px;
-    line-height: 140%;
-    font-weight: 300;
+	font-size: 14px;
+	font-weight: 300;
+	line-height: 140%;
 }
 
 button {
 	font-size: 18px;
 	font-weight: 300;
-    line-height: 140%;
-    -webkit-font-smoothing: antialiased;
+	line-height: 140%;
+	-webkit-font-smoothing: antialiased;
 
-    @media all and (max-width: @device-width-small) {
-        font-size: 14px;
-    }
+	@media all and (max-width: @device-width-small) {
+		font-size: 14px;
+	}
 }
 
 // PRESERVE HTML FONT-SIZE - iPHONE ORIENTATION CHANGE
@@ -89,7 +89,7 @@ html {
 
 // IE8 font
 .ie8 & {
-    body {
-        font-family: Arial, sans-serif;
-    }
+	body {
+		font-family: Arial, sans-serif;
+	}
 }
