Notify icon colour bug fix

--- a/less/notify.less
+++ b/less/notify.less
@@ -85,13 +85,18 @@
 		top: 0px;
 		.transition-border-color;
 
+		.notify-popup-icon-close {
+			color: @white;
+			.transition-color;
+		}
+
 		.no-touch &:hover {
 			border-color: darken(@white, 20%);
 
 			.notify-popup-icon-close {
 				color: darken(@white, 20%);
 			}
-		}
+		}		
 	}
 
 	.notify-shadow {
