remove role='button' from <button> elements - fixes #30

--- a/templates/notifyPush.hbs
+++ b/templates/notifyPush.hbs
@@ -14,6 +14,6 @@
 
 </div>
 
-<button class="base notify-push-close" role="button" aria-label="{{_globals._accessibility._ariaLabels.closePopup}}">
+<button class="base notify-push-close" aria-label="{{_globals._accessibility._ariaLabels.closePopup}}">
 	<span class="icon icon-cross"></span>
 </button>
