--- a/templates/drawer.hbs
+++ b/templates/drawer.hbs
@@ -2,11 +2,11 @@
 
 	<div class="drawer-toolbar clearfix">
 		<div class="drawer-back-button">
-			<button class="base drawer-back icon icon-controls-small-left" role="button" aria-label="{{_globals._accessibility._ariaLabels.previous}}"></button>
+			<button class="base drawer-back icon icon-controls-small-left" aria-label="{{_globals._accessibility._ariaLabels.previous}}"></button>
 		</div>
 
 		<div class="drawer-close-button">
-			<button class="base drawer-close icon icon-cross" role="button" aria-label="{{_globals._accessibility._ariaLabels.closeDrawer}}"></button>
+			<button class="base drawer-close icon icon-cross" aria-label="{{_globals._accessibility._ariaLabels.closeDrawer}}"></button>
 		</div>
 	</div>
 
